build/production/noncore-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: noncore-api
  namespace: production
spec:
  selector:
    matchLabels:
      app: noncore-api
  template:
    metadata:
      labels:
        app: noncore-api
    spec:
      containers:
      - name: noncore-api
        image: 887044485231.dkr.ecr.eu-west-1.amazonaws.com/noncore-api:latest
        args: ["npm", "run", "start:noncore"]
        resources:
          requests:
            memory: "384Mi"
            cpu: "0.2"
          limits:
            memory: "512Mi"
            cpu: "0.5"
        ports:
        - containerPort: 80
